--- a/assets/css/cfx-academy.css
+++ b/assets/css/cfx-academy.css
@@ -59,6 +59,7 @@
 .glossary-content {margin-top: 40px;}
 .glossary-tab-content {padding-left: 40px;}
 .glossary-tab-content h2 {display: inline-block; border-bottom: 1px solid #013365;}
+.glossary-tab-content h3 span{display: block; font-size: 14px; color: #000;}
 .glossary-title {border-right: 1px solid #DEDEDE; font-weight: bold;}
 .glossary-title h1 {font-weight: bold !important; font-size: 46px;}
 .v-border {background:url('./images/v-border.jpg') center right no-repeat; min-height: 20px; width: 1px; display: inline-block; }
@@ -81,5 +82,5 @@
 .video-thumb img {padding-bottom: 1em;}
 .video-thumb p{font-size: 14px;margin: 0;}
 @media (min-width:480px) {
-    .binary-logo-text {display: inline-block!important
+    .binary-logo-text {display: inline-block!important}
 }
