--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,9 @@
 	<title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 	<meta name="keywords" content="{{page.keywords}}">
+	<meta property="og:title" content="Champion-FX.com"/>
+	<meta property="og:type" content="website"/>
+	<meta property="og:image" content="{{ "/assets/images/cfx-animated-links.gif" | relative_url }}"/>
 	<link rel="icon" type="image/png" sizes="16x16" href="https://www.champion-fx.com/images/favicons/CFX_favicon16.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.champion-fx.com/images/favicons/CFX_favicon32.png"/>	
 	<link rel="stylesheet" href="https://www.champion-fx.com/css/style.min.css"/>
