--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,5 @@
 	<link rel="stylesheet" href="https://style.champion-fx.com/binary.css"/>	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
 	<script src="https://style.champion-fx.com/binary.js" type="text/javascript"></script>
-	<link rel="stylesheet" href={{ "assets/css/cfx-academy.css" | relative_url }}>
+	<link rel="stylesheet" href={{ "assets/css/cfx-academy.css | relative_url }}">
 </head>
