--- a/_includes/header.html
+++ b/_includes/header.html
@@ -127,7 +127,7 @@
 <div class="primary-color-dark mt5-header ">
 	<div class="fx-panel center-text container fx-middle">
 		<div class="row">
-			<div class="col-md">
+			<div class="col-md-12">
 				<h1 class="content-inverse-color">Academy</h1>
 				<p class="content-inverse-color">Welcome to the ChampionFX Academy where you can learn to be a better trader and stay up-to-date with the latest financial trends.</p>
 			</div>
