--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,4 +14,5 @@
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
 	<script src="https://style.champion-fx.com/binary.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="https://academy.champion-fx.com/assets/css/cfx-academy.css">
+	<!-- {{ site.github.url }} -->
 </head>
