--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,8 @@
 	<link rel="icon" type="image/png" sizes="16x16" href="https://www.champion-fx.com/images/favicons/CFX_favicon16.png"/>
     <link rel="icon" type="image/png" sizes="32x32" href="https://www.champion-fx.com/images/favicons/CFX_favicon32.png"/>	
 	<link rel="stylesheet" href="https://www.champion-fx.com/css/style.min.css"/>
-	<link rel="stylesheet" href="https://style.champion-fx.com/binary.css"/>	
+	<link rel="stylesheet" href="https://kelly-championfx.github.io/binary-style/binary.css"/>	
 	<script src="https://code.jquery.com/jquery-2.2.4.min.js" type="text/javascript"></script>
-	<script src="https://style.champion-fx.com/binary.js" type="text/javascript"></script>
+	<script src="https://kelly-championfx.github.io/binary-style/binary.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="{{ "/assets/css/cfx-academy.css" | prepend: domain }}">
 </head>
